# ip-addr-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  .sourcery.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  ci.yaml  deploy.yaml  publish.yaml
configs/: entrypoint.sh  ip-addr.conf  nginx.conf  traefik_dynamic.yaml
deploy/ansible/: cf_vars.yaml  cloudflare.yaml  git.yaml  git_vars.yaml  inventory.ini  ip_addr.yaml  playbook.yaml  vars.yaml
deploy/ansible/proxmox/: create_vm_template.yaml
deploy/ansible/templates/: ip-addr.service.j2  nginx.conf.j2
deploy/complex/ansible/: ansible.cfg  playbook.yaml  requirements.yaml
deploy/simple/ansible/: playbook.yaml
deploy/terraform/aws/: main.tf  providers.tf  terraform.tfvars.example  variables.tf
deploy/terraform/proxmox/: main.tf  providers.tf  terraform.tfvars.example  (+1 more)
deploy/terraform_AWS/: aws.tf
deploy/terraform_Proxmox/: cloudflare.tf  export.tf  providers.tf  proxmox.tf  variables.tf
deploy/vagrant/: Vagrantfile
deploy_AWS/: Vagrantfile  main.tf
deploy_AWS/ansible/: ansible.cfg  playbook.yaml  vars.yaml
deployment/: Vagrantfile  main.tf  server.yaml
deployment/templates/: ip-addr.service.j2  nginx.conf.j2
kubernetes/: deployment.yaml
scripts/: empty_file_contents.sh
src/: ip.py  logs.py  main.py
src/logs/: logger.py  logging.ini
src/static/: dark-mode.js  style.css
src/templates/: base.html  index.html
tests/: test_index.py  test_ip.py
(+46 files in other folders)
